update: chart to sunburst

--- a/purchases_tax_form.html
+++ b/purchases_tax_form.html
@@ -45,7 +45,7 @@
                         </div>
                         <div class="aui-list-item-input">
                             <label><input class="aui-radio" type="radio" name="hasLoan" value="1"> 有</label>
-                            <label><input class="aui-radio" type="radio" name="hasLoan" value="0"  checked> 无</label>
+                            <label><input class="aui-radio" type="radio" name="hasLoan" value="0" checked> 无</label>
                         </div>
                     </div>
                 </li>
@@ -66,8 +66,8 @@
                             动迁房
                         </div>
                         <div class="aui-list-item-input">
-                            <label><input class="aui-radio" type="radio" name="isRelocate" value="1" checked> 是</label>
-                            <label><input class="aui-radio" type="radio" name="isRelocate" value="0"> 否</label>
+                            <label><input class="aui-radio" type="radio" name="isRelocate" value="1"> 是</label>
+                            <label><input class="aui-radio" type="radio" name="isRelocate" value="0" checked> 否</label>
                         </div>
                     </div>
                 </li>
@@ -89,10 +89,9 @@
                             建筑面积
                         </div>
                         <div class="aui-list-item-input">
-                            <input type="number" placeholder="建筑面积" name="area">
-                        </div>
-                        <div class="aui-list-item-center">
-                            m<sub>2</sub>
+                            <label><input class="aui-radio" type="radio" name="area" value="91" checked>
+                                &gt;90m<sub>2</sub></label>
+                            <label><input class="aui-radio" type="radio" name="area" value="90"> &le;90m<sub>2</label>
                         </div>
                     </div>
                 </li>
@@ -110,28 +109,28 @@
                     </div>
                 </li>
                 <li class="aui-list-item">
+                    <div class="aui-list-item-label">
+                        原价
+                    </div>
                     <div class="aui-list-item-inner">
-                        <div class="aui-list-item-label">
-                            原价
-                        </div>
                         <div class="aui-list-item-input">
                             <input type="number" placeholder="金额" name="lastPrice">
                         </div>
-                        <div class="aui-list-item-center">
-                            元
+                        <div class="aui-list-item-label aui-list-item-right">
+                            万元
                         </div>
                     </div>
                 </li>
                 <li class="aui-list-item">
+                    <div class="aui-list-item-label">
+                        总价
+                    </div>
                     <div class="aui-list-item-inner">
-                        <div class="aui-list-item-label">
-                            总价
-                        </div>
                         <div class="aui-list-item-input">
                             <input type="number" placeholder="金额" name="totalPrice">
                         </div>
-                        <div class="aui-list-item-center">
-                            元
+                        <div class="aui-list-item-label aui-list-item-right">
+                            万元
                         </div>
                     </div>
                 </li>
