update: echarts library

--- a/purchases_tax_result.html
+++ b/purchases_tax_result.html
@@ -8,7 +8,7 @@
     <meta name="format-detection" content="telephone=no,email=no,date=no,address=no">
     <title>房产交易税计算器</title>
     <script src="./mj/tax.js"></script>
-    <script type="text/javascript" src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
+    <script type="text/javascript" src="./echarts/echarts.min.js"></script>
     <script type="text/javascript">
         var request = {
             QueryString: function (val) {
@@ -217,7 +217,7 @@
                 zlevel: 1,
                 highlightPolicy: 'descendant',
                 data: data,
-                center: ['50%', '48%'],
+                center: ['50%', '30%'],
                 sort: null,
                 itemStyle: {
                     borderColor: bgColor,
