--- a/purchases_tax_result.html
+++ b/purchases_tax_result.html
@@ -54,7 +54,18 @@
     <div id="container" style="height: 100%"></div>
     <script type="text/javascript">
 
-        var description = "<div class=\"aui-content taxDescription\"> 增值税(" + house.seller.incomeTax.toLocaleString('en-US') + "):<br/>" + house.incrementTaxDescription + "</div><div class=\"aui-content taxDescription\"> 附加税(" + house.seller.additionalTax.toLocaleString('en-US') + "):<br/>" + house.additionalTaxDescription + "</div><div class=\"aui-content taxDescription\"> 个税(" + house.seller.incomeTax.toLocaleString('en-US') + "):<br/>" + house.incomeTaxDescription + "</div><div class=\"aui-content taxDescription\"> 契税(" + house.buyer.deedTax.toLocaleString('en-US') + "):<br/>" + house.deedTaxDescription + "</div><div class=\"aui-content taxDescription\"> 中介费(" + house.buyer.agencyCost.toLocaleString('en-US') + "):<br/>" + house.agencyCostDescription + "</div><div class=\"aui-content taxDescription\"> 首付(" + house.buyer.initPayment.toLocaleString('en-US') + "):<br/>" + house.initPaymentDescription + "</div>";
+        var description = "<div class=\"aui-content taxDescription\"> 增值税(" + house.seller.incrementTax.toLocaleString('en-US') + "):<br/>"
+            + house.incrementTaxDescription
+            + "</div><div class=\"aui-content taxDescription\"> 附加税(" + house.seller.additionalTax.toLocaleString('en-US') + "):<br/>"
+            + house.additionalTaxDescription
+            + "</div><div class=\"aui-content taxDescription\"> 个税(" + house.seller.incomeTax.toLocaleString('en-US') + "):<br/>"
+            + house.incomeTaxDescription
+            + "</div><div class=\"aui-content taxDescription\"> 契税(" + house.buyer.deedTax.toLocaleString('en-US') + "):<br/>"
+            + house.deedTaxDescription
+            + "</div><div class=\"aui-content taxDescription\"> 中介费(" + house.buyer.agencyCost.toLocaleString('en-US') + "):<br/>"
+            + house.agencyCostDescription
+            + "</div><div class=\"aui-content taxDescription\"> 首付(" + house.buyer.initPayment.toLocaleString('en-US') + "):<br/>"
+            + house.initPaymentDescription + "</div>";
         document.getElementById("description").innerHTML = description;
 
         var dom = document.getElementById("container");
