update: 房屋类型修改

--- a/purchases_tax_form.html
+++ b/purchases_tax_form.html
@@ -19,7 +19,7 @@
                 <li class="aui-list-item">
                     <div class="aui-list-item-inner">
                         <div class="aui-list-item-label">
-                            物业类型
+                            房屋类型
                         </div>
                         <div class="aui-list-item-input">
                             <label><input class="aui-radio" type="radio" name="isCommon" value="1"> 普通</label>
